--- a/aboutus.html
+++ b/aboutus.html
@@ -63,7 +63,8 @@ style>
     
     <div class="text-center lg:w-2/3 w-full">
       <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900" style="color: white;">OUR MISSION</h1>
-      <p class="mb-8 leading-relaxed" style="color: white;">Our aim is to give you all information on the latest technology which is evolving around us. We also 
+      <p class="mb-8 leading-relaxed" style="color: white;">Our aim is to give you all information on the latest technology which is evolving around us. 
+                                                           
       </p>
       <div class="flex justify-center">
    
