--- a/iot.html
+++ b/iot.html
@@ -112,7 +112,7 @@
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="sh_animation.gif">
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1">Example 1</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1"></h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">SmartPhone</h1>
                 <p class="leading-relaxed">A smartphone is a mobile phone that can do more than other phones. They work as a computer but are mobile devices small enough to fit in a user's hand. Uses include: Sending and receiving emails, text, etc </p>
               </div>
@@ -122,7 +122,7 @@
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="smart refrigerator.gif">
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1">Example 2</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1"></h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Smart Refrigerator</h1>
                 <p class="leading-relaxed">A smart refrigerator, is a refrigerator which is able to communicate with the internet. This kind of refrigerator is often equipped to determine itself whenever a food item needs to be replenished. </p>
               </div>
@@ -132,7 +132,7 @@
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="smartwatch.gif">
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1">Example 3</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1"></h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Smart Watch</h1>
                 <p class="leading-relaxed">A smartwatch is a wearable computer in the form of a watch; modern smartwatches provide a local touchscreen interface for daily use, while an associated smartphone app provides for management and telemetry</p>
               </div>
@@ -152,7 +152,7 @@
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="cctv_camera.gif">
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1">Example 5</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1"></h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Smart Security Cameras</h1>
                 <p class="leading-relaxed">Smart security cameras are the latest trends when it comes to surveillance cameras for home. These cameras offer features like sound detection, night vision, live view, etc.</p>
               </div>
@@ -162,7 +162,7 @@
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="bio.gif">
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1">Example 6</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1"></h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Biometrics</h1>
                 <p class="leading-relaxed">Biometrics are unique physical characteristics, such as fingerprints, that can be used for automated recognition. It is called the Automated Biometric Identification System.</p>
               </div>
