--- a/iot.html
+++ b/iot.html
@@ -142,7 +142,7 @@
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center" src="smartbike.gif">
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-100">
-                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1">Example 4</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-red-500 mb-1"></h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Smart Bike</h1>
                 <p class="leading-relaxed">A smart bike is geared towards the needs of the cyclist. It will be designed to handle the power that a serious cyclist can put out and there will be plenty of metrics on how well you're going.</p>
               </div>
